# BusinessManagment

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py
app/auth/: auth_utils.py  middleware.py
app/models/: companies.py  departments.py  invites.py  positions.py  roles.py  tasks.py  users.py
app/repositories/: base.py  company.py  department.py  invite.py  position.py  role.py  task.py  user.py
app/routers/v1/: auth.py  departments.py  invites.py  positions.py  roles.py  tasks.py  users.py
app/schemas/: auth.py  departments.py  tasks.py  user.py
app/services/: auth.py  base.py  department.py  invite.py  position.py  role.py  task.py  user.py
app/uow/: unit_of_work.py
app/utils/: README-certs.md
migrations/: env.py
migrations/versions/: 340aeb769d76_relation_migration.py  57f6dac20634_init_migration.py  eaba36dcee8c_renamed_invite_column.py
